--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,3 +91,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUI",NewName="/Script/ProjectZam.PlayerWall.ScoreUI")
++PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUIFactory",NewName="/Script/ProjectZam.PlayerWall.ScoreUIFactory")
