--- a/ProjectZam.uproject
+++ b/ProjectZam.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ProjectZam",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG"
+			]
 		}
 	],
 	"Plugins": [
