성공 및 실패 사운드 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,3 +95,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUI",NewName="/Script/ProjectZam.PlayerWall.ScoreUI")
 +PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUIFactory",NewName="/Script/ProjectZam.PlayerWall.ScoreUIFactory")
++PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.ScoreSound",NewName="/Script/ProjectZam.PlayerWall.AddScoreSound")
