chore: 시작 메뉴 레벨 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/UIs/StartMenu/StartMenuLevel.StartMenuLevel
+EditorStartupMap=/Game/UIs/StartMenu/StartMenuLevel.StartMenuLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -96,3 +96,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUI",NewName="/Script/ProjectZam.PlayerWall.ScoreUI")
 +PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.MainUIFactory",NewName="/Script/ProjectZam.PlayerWall.ScoreUIFactory")
 +PropertyRedirects=(OldName="/Script/ProjectZam.PlayerWall.ScoreSound",NewName="/Script/ProjectZam.PlayerWall.AddScoreSound")
+
